--- a/rest/src/main/resources/application.yml
+++ b/rest/src/main/resources/application.yml
@@ -21,8 +21,8 @@ spring:
   name: blog
   datasource:
     url: jdbc:mysql://localhost:3306/blog?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Hong_Kong&characterEncoding=UTF-8
-    username: blog
-    password: Blog@2021
+    username: *
+    password: *
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       minimum-idle: 1
