--- a/dao/src/main/resources/jdbc.properties
+++ b/dao/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/blog?useSSL=false&allowPublicKeyRetrieval=true
-jdbc.userId=blog
-jdbc.password=Blog@2021
+jdbc.userId=*
+jdbc.password=*
 jdbc.serverTimezone=Asia/Hong_Kong
 jdbc.useSSL=false
 jdbc.nullCatalogMeansCurrent=true
